<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:background="#dbecc7"
              android:orientation="vertical"
              android:weightSum="2"
              android:gravity="center_vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:id="@+id/tasks_categories_buttons">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_green_300"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/over_due_btn">

                <TextView
                        android:id="@+id/over_due_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/vector_drawable_ic_error_outline_black___px"
                        android:text="Over Due"
                        android:layout_weight="1"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true" />
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_green_300"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/actual_btn">

                <TextView
                        android:id="@+id/actual_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_access_time_24dp"
                        android:text="Actual"
                        android:layout_weight="1"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:layout_weight="1">
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_green_300"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/done_btn">

                <TextView
                        android:id="@+id/done_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_drawable_checked"
                        android:text="Done"
                        android:layout_weight="1"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true" />
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_green_800"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/add_task_btn"
                    android:clickable="true">

                <TextView
                        android:id="@+id/add_task_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:drawableTop="@drawable/ic_add_circle_outline_24dp"
                        android:text="Add Task"
                        android:layout_weight="1"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>